# shopsimple

./: .gitignore  FILTER_IMPLEMENTATION.md  FRONTEND_API_UPGRADE.md  Makefile  NOTES.md  README.md  docker-compose.yml  go.work  go.work.sum  request.json
doc/: README.md
envoy/: Dockerfile  descriptor.pb  envoy.yaml
prometheus/: prometheus.yml
proto/: buf.gen.yaml  buf.yaml
services/frontendservice/src/: App.tsx
services/productsservice/: Makefile  buf.gen.yaml  buf.yaml  go.mod  go.sum
src/authservice/: Cargo.toml
src/authservice/crates/application/src/ports/: user_repository.rs
src/authservice/crates/application/src/services/: user_service.rs
src/authservice/crates/application/src/use_cases/: deactivate_user.rs
src/authservice/crates/auth-infra/: Cargo.toml
src/authservice/crates/domain/: Cargo.toml
src/authservice/crates/domain/src/: lib.rs
src/authservice/crates/domain/src/auth/: auth_provider.rs  error.rs  mod.rs
src/authservice/crates/domain/src/entities/: user.rs
src/authservice/crates/domain/src/value_objects/: mod.rs  role.rs  user_id.rs
src/cartservice/: .env  Makefile  buf.gen.yaml  go.mod  go.sum  req.json
src/common/: types.go
src/currencyservice/: .env  Makefile  buf.gen.yaml  buf.yaml  currency_converter.py  currency_server.py  requirements.txt
src/frontendservice/: Makefile  buf.gen.yaml  index.html  package-lock.json  package.json
src/productservice/: .env  Dockerfile  Makefile  README.md  buf.gen.yaml  docker-compose.yml  go.mod  go.sum
src/productsservice/: .env  Makefile  go.mod
(+130 files in other folders)
