[package]
name = "authservice"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/application", "crates/auth-infra", "crates/infra", "crates/domain"]

[workspace.dependencies]
domain = { path = "./crates/domain" }
application = { path = "./crates/application" }
infra = { path = "./crates/infra" }
auth-infra = { path = "./crates/auth-infra" }

# Common external crates 
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"